# furst

./: .editorconfig  .gitignore  0  CLAUDE.md  CMakeLists.txt  EPICS.md  README.md  build.ps1  compile.ps1  dev.sh  flake.nix  get-llvm.ps1  log.txt  main.cpp  tasks.md
.claude/: session-state.md  tasks.md
.claude/skills/cpp-backend/: SKILL.md
.claude/skills/discuss/: SKILL.md
.claude/skills/testing/: SKILL.md
backend/: .clang-format  .clang-tidy  CMakeLists.txt  CPP_LEARNT.md  EPICS.md  README.md
backend/src/: ast_types.h  backend.cpp  backend.h  emitter.cpp  emitter.h  errors.cpp  errors.h  fso_reader.cpp  fso_reader.h  main.cpp  result.h
backend/tests/: test_emitter.cpp  test_errors.cpp  test_ice.cpp  test_integration.cpp  test_reader.cpp  test_smoke.cpp
backend/tests/fixtures/: big_script.fso  captured_param.fso  chained_ops.fso  literal_int.fso  multi_function.fso  nested_function.fso  simple_add.fso
cmake/caches/: llvm.cmake
docs/adr/: ADR-0001-symbol-tracking.md  ADR-0002-type-system.md  ADR-0003-async-task-scheduler.md  ADR-0004-memory-ownership.md  ADR-0005-resource-management.md  ADR-0006-allocation-strategy.md  ADR-0007-string-collection-types.md  ADR-0008-module-system.md  ADR-0009-monadic-ast-parsing.md  README.md
docs/discussions/: README.md  memory.md  modules-namespaces-bcl.md  monadic-ast-parsing.md
examples/: add.fu  hello.fu  nested.fu
frontend/: Directory.Build.props  Furst.Frontend.fsproj  Furst.sln  Program.fs  aitest.fsx  test.fsx  test.ps1
frontend/main/: BasicTypes.fs  CommonParsers.fs  FunctionDefinitionParser.fs  Furst.Frontend.fsproj  LanguageExpressions.fs  Program.fs  StructParser.fs  TestTwoPhase.fs  TypeKeywords.fs  VariableDefinitionParser.fs
frontend/src/compiler/: Compiler.fs  Furst.Compiler.fsproj  Pipeline.fs  ProjectConfig.fs
frontend/src/compiler/Check/: SymbolTable.fs  TypeInference.fs
frontend/src/compiler/Core/: Ast.fs  Types.fs
frontend/src/compiler/Emit/: FsoWriter.fs
frontend/src/compiler/Lower/: LambdaLifting.fs  Lowered.fs
frontend/src/compiler/Parse/: AstBuilder.fs  ExpressionParser.fs  Lexer.fs  Parsers.fs  RowParser.fs  StatementParser.fs  TokenCombinators.fs
frontend/src/compiler/Tokenise/: Lexer.fs  Parsers.fs  StructParser.fs
frontend/src/furst/: Cli.fs  CliArgs.fs  Furst.Cli.fsproj  Program.fs
frontend/src/furst/Commands/: AstCommand.fs  BuildCommand.fs  CheckCommand.fs  LexCommand.fs  NewCommand.fs  RunCommand.fs  VersionCommand.fs
frontend/src/furstp/: Furst.Furstp.fsproj  Program.fs
frontend/src/llvmir/: Furst.Llvmir.fsproj  Generator.fs
frontend/src/main/: BasicTypes.fs  Cli.fs  CommonParsers.fs  FsoWriter.fs  Furst.Frontend.fsproj  LanguageExpressions.fs  Lowering.fs  Pipeline.fs  Program.fs  ProjectConfig.fs  StructParser.fs  TestTwoPhase.fs  TypeInference.fs
frontend/src/main/Check/: SymbolTable.fs  TypeInference.fs
frontend/src/main/Core/: Ast.fs
frontend/src/main/Emit/: FsoWriter.fs
frontend/src/main/Lower/: LambdaLifting.fs
frontend/src/proto/: Furst.Proto.csproj  FurstAst.cs
frontend/tests/: AstBuilderTests.fs  AstWalkerTests.fs  CommonParsersTests.fs  DebugAstTest.fs  FunctionTests.fs  Furst.Tests.fsproj  GenerateFixtures.fs  LoweringIntegrationTests.fs  ParserHelper.fs  Program.fs  Scratchpad.fsx  StructParserTests.fs  VariableTests.fs
frontend/tests/Check/: SymbolTableTests.fs  VisibilityTests.fs
frontend/tests/Compile/: CompileHelper.fs  DependencyTests.fs  EntryPointTests.fs  ModuleScopingErrorTests.fs  ModuleScopingTests.fs  VisibilityErrorTests.fs  VisibilityTests.fs
frontend/tests/Core/: AstWalkerTests.fs
frontend/tests/Emit/: GenerateFixtures.fs  RoundtripTests.fs
frontend/tests/LlvmirTests/: GeneratorTests.fs
frontend/tests/Lower/: LambdaLiftingTests.fs
frontend/tests/Parse/: DebugAstTest.fs  ParserHelper.fs  ParsersTests.fs  StructParserTests.fs
frontend/tests/Parse/Ast/: ExpressionTests.fs  FunctionDefinitionTests.fs  LetBindingTests.fs  ModuleSystemErrorTests.fs  ModuleSystemTests.fs  UserDefinedOperatorTests.fs
include/: AddConst.h
lib/: AddConstAnalysis.cpp  AddConstPlugin.cpp  CMakeLists.txt  main.cpp
proto/: furst_ast.proto
tests/: Furst.Integration.sln
tests/Furst.Integration.Tests/: ExecutableTests.fs  Furst.Integration.Tests.fsproj  LibraryTests.fs  ModuleErrorTests.fs  ModuleTests.fs  Tests.fs
